<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>
    <string name="city">Saint-Petersburg</string>
    <string name="mediumTemperature">Medium year temperature: NO DATA</string>
    <string name="humidity">Humidity: 70%</string>
    <string name="temperature">Temperature: 20 C</string>
    <string name="pressure">Pressure: 756 mm</string>
    <string name="windSpeed">Wind speed: 25 KpH</string>
    <string name="enter_city">Enter city</string>
    <string name="city_hint">Enter city for forecast</string>
    <string name="button_show_forecast">Show forecast</string>
    <string name="checkbox_show_temperature">Show temperature</string>
    <string name="checkbox_show_pressure">Show pressure</string>
    <string name="checkbox_show_humidity">Show humidity</string>
    <string name="checkbox_show_wind_speed">Show wind speed</string>

    <string name="button_send_forecast">Send forecast</string>
    <string name="button_medium_year_temperature">medium year temperature</string>
    <string name="button_show_temperature_data">Show temp data</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_weather_fragment">Hello from weather fragment</string>

    <string name="drawer_menu_header">Application menu</string>
    <string name="drawer_main_activity">Forecast</string>
    <string name="drawer_about">About app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
