<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint"
            android:inputType="textPersonName"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:id="@+id/checkBoxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_temperature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <CheckBox
        android:id="@+id/checkBoxPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_pressure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTemperature" />

    <CheckBox
        android:id="@+id/checkBoxHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPressure" />

    <CheckBox
        android:id="@+id/checkBoxWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_wind_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHumidity" />


    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_forecast"
        android:textSize="15sp"
        android:elevation="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWindSpeed" />

</android.support.constraint.ConstraintLayout>