<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/weatherData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"></LinearLayout>

    <Button
        android:id="@+id/forecastEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_forecast"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherData" />

    <Button
        android:id="@+id/temperatureDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_temperature_data"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastEmailButton" />

</androidx.constraintlayout.widget.ConstraintLayout>